--- a/1-11.css
+++ b/1-11.css
@@ -31,7 +31,7 @@ main {
 .step-img1 {
   height: 150px;
   background-image: url(img/flow01.png);
-  background-position: bottom;
+  background-position:bottom;
   background-size: cover;
 }
 
@@ -71,23 +71,13 @@ footer {
     width:100%;
     display:block;
     margin:50px 0 50px 0;
-    padding:0 10% 0 10%;
+
   }
 
   .step-box{
     width:90%;
-    margin-bottom: 20px ;
+    margin: 0 5% 20px ;
+
  }
 
-  .step-img1{
-   width: 90%;
-  }
-
-  .step-img2{
-   width: 90%;
-  }
-
-  .step-img3{
-   width: 90%;
-  }
 }
